IESP-27 business logics and tests implementation, refactoring of old junit tests, elimination of unused code and dependencies, minor adjustments to openapi specification
