# src/main/java/it/pagopa/interop/probing/mapstruct/dto/UpdateEserviceProbingStateDto.java
@@ -1,14 +1,13 @@
 package it.pagopa.interop.probing.mapstruct.dto;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
-import it.pagopa.interop.probing.interop_be_probing_api.model.EserviceState;
 import lombok.Data;
 
 import javax.validation.constraints.NotNull;
 import java.util.UUID;
 
 @Data
-public class UpdateEserviceStateDto {
+public class UpdateEserviceProbingStateDto {
 
     @NotNull
     @JsonProperty("eserviceId")
@@ -19,6 +18,5 @@ public class UpdateEserviceStateDto {
     private UUID versionId;
 
     @NotNull
-    @JsonProperty("eServiceState")
-    private EserviceState newEServiceState;
+    private boolean probingEnabled;
 }
