# src/main/java/it/pagopa/interop/probing/model/Eservice.java
@@ -1,18 +1,17 @@
 package it.pagopa.interop.probing.model;
-
-import com.fasterxml.jackson.annotation.JsonFormat;
-import it.pagopa.interop.probing.interop_be_probing.model.EServiceState;
-import it.pagopa.interop.probing.util.EserviceType;
+import it.pagopa.interop.probing.interop_be_probing_api.model.EserviceState;
+import it.pagopa.interop.probing.util.EserviceTechnology;
 import lombok.*;
 import org.hibernate.annotations.Type;
 import org.hibernate.annotations.TypeDef;
 import javax.persistence.*;
+import javax.validation.constraints.Min;
 import javax.validation.constraints.NotBlank;
 import javax.validation.constraints.NotNull;
 import javax.validation.constraints.Size;
 import java.io.Serializable;
 import java.time.OffsetDateTime;
-import java.time.OffsetTime;
+import java.time.ZoneOffset;
 import java.util.UUID;
 
 /**
@@ -27,15 +26,15 @@ import java.util.UUID;
 public class Eservice implements Serializable {
 
     @Id
-    @GeneratedValue(strategy = GenerationType.AUTO, generator = "eservice_sequence")
+    @GeneratedValue(strategy = GenerationType.SEQUENCE, generator = "eservice_sequence")
     @SequenceGenerator(name = "eservice_sequence",sequenceName = "eservice_sequence", allocationSize = 1)
     @Column(updatable = false)
-    private long id;
+    private Long id;
 
     @NotNull
     @Size(max = 255)
     @Basic(optional = false)
-    @Column(name="base_path", columnDefinition = "varchar[]")
+    @Column(name="base_path", columnDefinition = "varchar(255) array")
     @Type(type = "basePathType")
     private String[] basePath;
 
@@ -45,31 +44,44 @@ public class Eservice implements Serializable {
     private String eserviceName;
 
     @NotNull
-    @Column(name="eservice_type")
+    @Column(name="eservice_technology")
     @Enumerated(EnumType.STRING)
-    private EserviceType eserviceType;
+    private EserviceTechnology technology;
 
     @NotNull
     @Column(name="eservice_id")
     private UUID eserviceId;
 
-    @Column(name="last_request", columnDefinition = "TIMESTAMP WITH TIME ZONE")
-    private OffsetDateTime lastRequest;
-
-    @Column(name="response_received", columnDefinition = "TIMESTAMP WITH TIME ZONE")
-    private OffsetDateTime responseReceived;
-
     @NotNull
     @Column(name="polling_end_time", columnDefinition = "TIMESTAMP with time zone")
-    private OffsetDateTime pollingEndTime;
+    private OffsetDateTime pollingEndTime = OffsetDateTime.of(
+            OffsetDateTime.now().getYear(),
+            OffsetDateTime.now().getMonthValue(),
+            OffsetDateTime.now().getDayOfMonth(),
+            23,
+            59,
+            0,
+            0,
+            ZoneOffset.UTC
+    );
 
     @NotNull
+    @Min(1)
     @Column(name="polling_frequency", columnDefinition = "integer default 5")
     private Integer pollingFrequency = 5;
 
     @NotNull
     @Column(name="polling_start_time", columnDefinition = "TIMESTAMP with time zone")
-    private OffsetDateTime pollingStartTime;
+    private OffsetDateTime pollingStartTime = OffsetDateTime.of(
+            OffsetDateTime.now().getYear(),
+            OffsetDateTime.now().getMonthValue(),
+            OffsetDateTime.now().getDayOfMonth(),
+            0,
+            0,
+            0,
+            0,
+            ZoneOffset.UTC
+    );
 
     @NotNull
     @Column(name="probing_enabled")
@@ -83,7 +95,7 @@ public class Eservice implements Serializable {
     @NotNull
     @Enumerated(EnumType.STRING)
     @Column(name = "state")
-    private EServiceState state;
+    private EserviceState state;
 
     @NotNull
     @Column(name="version_id")
